# horizon-canvas

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
controllers/generation/: cpu_engine.cpp  cpu_engine.h  geometry_json.cpp  geometry_json.h  image_math.cpp  image_math.h  image_preprocessor.cpp  image_preprocessor.h  opencl_engine.cpp  opencl_engine.h  search_engine.h  shape_generator.cpp  shape_generator.h
controllers/injection/: fh6_injector.cpp  fh6_injector.h  rtti_locator.cpp  rtti_locator.h  win_process.cpp  win_process.h
mainwindow/: mainwindow.cpp  mainwindow.h
models/: generation_settings.h  session_state.h  shape_data.h
pages/: generate_page.cpp  generate_page.h  inject_page.cpp  inject_page.h  log_page.cpp  log_page.h  resume_page.cpp  resume_page.h
styles/: colors.h  text_style.h
widgets/: custom_settings_panel.cpp  custom_settings_panel.h  image_drop_widget.cpp  image_drop_widget.h  json_drop_widget.cpp  json_drop_widget.h  quality_selector.cpp  quality_selector.h  zoomable_graphics_view.cpp  zoomable_graphics_view.h
